better html sample

--- a/form.html
+++ b/form.html
@@ -1,18 +1,14 @@
-<html>
-   <body>
-      <form action="" method="post" enctype="multipart/form-data">
-         <fieldset>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your full name" />
-            <br />
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email address" />
-            <br />
-            <label for="description">Description:</label>
-            <textarea id="description" name="description" placeholder="Enter a short description about yourself"></textarea>
-            <br />
-            <input type="submit" value="Create Profile" />
-         </fieldset>
-      </form>
-   </body>
+<!DOCTYPE html>
+<head>
+  <title>Fill in this form</title>
+</head>
+<body>
+  <form action="" method="post" enctype="multipart/form-data">
+  <label for="Email">Email</label><br />
+  <input id="Email" type="email" name="Email" required><br />
+  <label for="Name">Name</label><br />
+  <input id="Name" type="text" name="Name" required><br />
+  <input type="submit" value="Send">
+</form>
+</body>
 </html>
