--- a/form.html
+++ b/form.html
@@ -8,6 +8,7 @@
   <input id="Email" type="email" name="Email" required><br />
   <label for="Name">Name</label><br />
   <input id="Name" type="text" name="Name" required><br />
+  <input type="hidden" name="token" value="example" />
   <input type="submit" value="Send">
 </form>
 </body>
