--- a/public/form.html
+++ b/public/form.html
@@ -65,7 +65,7 @@
       <label for="Name">Name</label><br />
       <input id="Name" type="text" name="Name" required><br />
       <input type="hidden" name="site" value="home page of serverless forms" />
-      <input type="hidden" name="thanks" value="https://test.com/thanks" />
+      <input type="hidden" name="thanks" value="http://localhost:8080/thanks" />
       <input type="submit" value="Send">
     </form>
     <aside>
