--- a/public/form.html
+++ b/public/form.html
@@ -66,6 +66,7 @@
       <input id="Name" type="text" name="Name" required><br />
       <input type="hidden" name="site" value="home page of serverless forms" />
       <input type="hidden" name="thanks" value="http://localhost:8080/thanks" />
+      <input type="hidden" name="token" value="CjVEFzAbx" />
       <input type="submit" value="Send">
     </form>
     <aside>
